# FileKitty

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  architecture.md  architecture_boundaries.md  example_payloads.json  pyproject.toml  setup.py  swift_integration_spec.md
.github/workflows/: build.yml  lint.yml
filekitty/: app.py
src/filekitty/: __main__.py  app_logic.py  constants.py  dialogs.py  history_manager.py  main_window.py  models.py  python_parser.py  qt_widgets.py  utils.py
src/filekitty/core/: history_manager.py  project_tree.py  python_parser.py  utils.py
src/filekitty/resources/icon/: FileKitty-icon.icns
src/filekitty/ui/: dialogs.py  main_window.py  qt_widgets.py  tree_settings_dialog.py
src/tests/: test_models.py
swift/FileKitty/: ContentView.swift  FileKittyApp.swift
swift/FileKitty.xcodeproj/: project.pbxproj
swift/FileKitty.xcodeproj/project.xcworkspace/xcuserdata/rob.xcuserdatad/: UserInterfaceState.xcuserstate
swift/FileKitty.xcodeproj/xcuserdata/rob.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/FileKittyTests/: FileKittyTests.swift
swift/FileKittyUITests/: FileKittyUITests.swift  FileKittyUITestsLaunchTests.swift
tools/: dmg_settings.json  format.py  release.py  sign_and_notarize.py  validate_release.py
tools/packaging/: dmg_settings.json  entitlements.plist  sign_and_notarize.py
tools/utility-prototypes/: split_md_by_header.py
