[tool.poetry]
name = "filekitty"
version = "0.1.0"
description = ""
authors = ["banagale <robert@weave.bio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.10"


[tool.poetry.group.dev.dependencies]
py2app = "^0.28.7"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
